--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.21.1",
     "faker": "^5.5.2",
+    "firebase": "^8.7.0",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slideshow-image": "^3.4.5",
+    "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
