--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.16.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
@@ -11,12 +13,14 @@
     "faker": "^5.5.2",
     "firebase": "^8.7.0",
     "history": "^5.0.0",
+    "netlify": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
     "react-slideshow-image": "^3.4.5",
     "react-toastify": "^7.0.4",
+    "stripe": "^8.165.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
